discussion/kv_engine/174849/174849_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52131: Optimize CheckpointCursor::operator< from O(num_items) to O(1)

CheckpointCursor's operator< is currently O(n) in the case where two
cursors are pointing at the same item.

This is due to the fact that if they point to the same Checkpoint and
seqno, we must check their distance along the Checkpoint (as one may
be pointing to a meta-item which shares a seqno but it ahread of the
cursor) - however to do so requires calling std::distance(begin(),
cursorIterator), and as the CheckpointCursor itorator is not random
access (it's essentially a std::list::iterator) we must perform an
O(n) iteration from the beginning of the container to the cursor.

This results in the following performance characteristics as the
Checkpoint grows in items:

    Running ./ep_engine_benchmarks
    Run on (10 X 24.0102 MHz CPU s)
    CPU Caches:
      L1 Data 64 KiB (x10)
      L1 Instruction 128 KiB (x10)
      L2 Unified 4096 KiB (x5)
    Load Average: 6.28, 11.37, 18.63
    ---------------------------------------------------------------------------------
    Benchmark                                       Time             CPU   Iterations
    ---------------------------------------------------------------------------------
    CheckpointBench/GetLowestCursor/1            13.8 ns         13.7 ns     51002565
    CheckpointBench/GetLowestCursor/10           23.5 ns         23.4 ns     30190632
    CheckpointBench/GetLowestCursor/100           200 ns          200 ns      3489427
    CheckpointBench/GetLowestCursor/1000         2115 ns         2112 ns       332576
    CheckpointBench/GetLowestCursor/10000       37857 ns        37799 ns        18850
    CheckpointBench/GetLowestCursor/100000     270262 ns       269972 ns         2537

However, as part of patch "MB-48506: Introduce
CheckpointCursor::distance" (74b9cf4f) we added a 'distance' member to
each CheckpointCursor which caches its distance from the start of the
container, and is updated whenever a cursor moves.

As such, we can use the cached distanece value in
heckpointCursor::operator<, reducing the cost to O(1) in the case
where two cursors point to the same item:

    Running ./ep_engine_benchmarks
    Run on (10 X 24.1207 MHz CPU s)
    CPU Caches:
      L1 Data 64 KiB (x10)
      L1 Instruction 128 KiB (x10)
      L2 Unified 4096 KiB (x5)
    Load Average: 7.73, 12.32, 19.30
    ---------------------------------------------------------------------------------
    Benchmark                                       Time             CPU   Iterations
    ---------------------------------------------------------------------------------
    CheckpointBench/GetLowestCursor/1            13.8 ns         13.8 ns     50626686
    CheckpointBench/GetLowestCursor/10           13.9 ns         13.8 ns     50958011
    CheckpointBench/GetLowestCursor/100          13.8 ns         13.8 ns     50932798
    CheckpointBench/GetLowestCursor/1000         13.9 ns         13.9 ns     50392340
    CheckpointBench/GetLowestCursor/10000        14.0 ns         14.0 ns     50426827
    CheckpointBench/GetLowestCursor/100000       13.9 ns         13.8 ns     50859526

Change-Id: I1814155d7eff9773ab29c30f6b76836963a75ac8
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/174789
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
(cherry picked from commit 5b281366133f40b52137fb01e67231d571834de5)

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-05-20 11:53:57.000000000
Message: 
Patch Set 1: Cherry Picked from branch master.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-20 11:54:07.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/299394/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-20 12:09:10.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/191/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13: error: no viable conversion from "std::__shared_ptr_access<CheckpointCursor, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "CheckpointCursor") to "CheckpointCursor *" [clang-diagnostic-error]
            *cursor, items, std::numeric_limits<size_t>::max());
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/checkpoint_manager.h:318:56: note: passing argument to parameter "cursor" here
    ItemsForCursor getItemsForCursor(CheckpointCursor* cursor,
                                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/191/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13:
error: no viable conversion from "std::__shared_ptr_access<CheckpointCursor, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "CheckpointCursor") to "CheckpointCursor *" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/191/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/270/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc(608): error C2664: "CheckpointManager::ItemsForCursor CheckpointManager::getItemsForCursor(CheckpointCursor *,std::vector<queued_item,std::allocator<_Ty>> &,size_t)": cannot convert argument 1 from "_Ty2" to "CheckpointCursor *" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/270/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/198/ : FAILURE

Compile error at [2022-05-20T12:00:52.016Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13:
error: cannot convert ?std::__shared_ptr_access<CheckpointCursor, __gnu_cxx::_S_atomic, false, false>::element_type? {aka ?CheckpointCursor?} to ?CheckpointCursor*?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/198/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/194/ : FAILURE

Compile error at [2022-05-20T12:00:49.429Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13:
error: no viable conversion from "std::__shared_ptr_access<CheckpointCursor, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "CheckpointCursor") to "CheckpointCursor *"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/194/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/184/ : FAILURE

Compile error at [2022-05-20T11:58:23.952Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13:
error: cannot convert ?std::__shared_ptr_access<CheckpointCursor, __gnu_cxx::_S_atomic, false, false>::element_type? {aka ?CheckpointCursor?} to ?CheckpointCursor*?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/184/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/190/ : FAILURE

Compile error at [2022-05-20T12:00:28.410Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13:
error: no viable conversion from "std::__shared_ptr_access<CheckpointCursor, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "CheckpointCursor") to "CheckpointCursor *"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/190/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/195/ : FAILURE

Compile error at [2022-05-20T12:01:43.825Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13:
error: no viable conversion from "std::__shared_ptr_access<CheckpointCursor, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "CheckpointCursor") to "CheckpointCursor *"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/203/ : FAILURE

Compile error at [2022-05-20T12:01:10.033Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13:
error: cannot convert ?std::__shared_ptr_access<CheckpointCursor, __gnu_cxx::_S_atomic, false, false>::element_type? {aka ?CheckpointCursor?} to ?CheckpointCursor*?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/266/ : FAILURE

Compile error at [2022-05-20T11:57:24.270Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:609:13:
error: no viable conversion from "CheckpointCursor" to "CheckpointCursor *"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/266/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16621/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/188/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
